<resources>
    <string name="app_name">Sustainability Index For Urban Transport TEP</string>
    <string name="title_activity_main">MainActivity</string>

    <!--drawer menu options-->
    <string name="donate">New Donation</string>
    <string name="about_us">About Us</string>
    <string name="core_team">Our Team</string>
    <string name="gallery">Your Donations</string>
    <string name="user_profile">My Profile</string>
    <!--drawer menu options end-->

    <string name="about_info">This app introduces a new way for users to contribute to analysis of transportation surveys. Users contributing to this initiative will be providing a greater precision to the analysis done which will help in better transportation services to the citizens.
</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_in_facebook">Sign In With Facebook</string>
    <string name="sign_in_google">Sign In With Google</string>
    <string name="sign_up_facebook">Register With Facebook</string>
    <string name="sign_up_google">Register With Google</string>
    <string name="take_to_sign_up">New member?</string>
    <string name="take_to_sign_in">Already a member?</string>

    <string name="edit">EDIT</string>

    <string name="unexpected_logout">An unexpeceted logout occurred. Please Login again.</string>
    <string name="unknown_error">Unknown error. Please try again.</string>
    <string name="email_updated">E-mail successfully update. Kindly verify your email using the verification link sent on your mail id.</string>
    <string name="login_to_phoneverify_error">Something went wrong. If your registration was successful, you can are good to login here.</string>
    <string name="getidtoken">678857064843-a1c521kdtfnam4oo9ehcgc7pmujvgo82.apps.googleusercontent.com</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCMk4LKfv17pVGoTcUVTTPHI_jgCxyytd8</string>

    <string name="policy1">Integrated network of Bus ana Metro with Integrated Ticket System</string>
    <string name="policy2">Car sharing</string>
    <string name="policy3">Electric mobility</string>
    <string name="policy4">Car/2W Free Zones in City Centers</string>
    <string name="policy5">Extensive network for cycle and walk</string>
    <string name="policy6">Extensive parking fees for Cars/Private vehicles</string>
    <string name="policy7">Transit oriented development</string>
    <string name="title_activity_map_location">Location</string>

    <string name="location_description">Choose between manually filling the travel characteristic form or we can use your location to do it for you.\n
                        \nThis will require your location service to be turned on.
                        \nYou can change this later using switch button.</string>
</resources>
